# RTOS

all_components_together/: CMakeLists.txt
all_components_together/components/dht11/: CMakeLists.txt  data_from_dht11.c  dht11.c
all_components_together/components/include/: components.h
all_components_together/components/leds/: leds.h
all_components_together/components/make_noise/: CMakeLists.txt  make_some_noise.c  make_some_noise.h
all_components_together/main/: CMakeLists.txt  data_from_uart.c  main.h
components/oled/: oled.c  oled.h
creative/components/dht11/: dht11.h  (+2 more)
creative/components/mx_function/: CMakeLists.txt  mx_function.h
creative/main/: CMakeLists.txt  data_from_uart.c  main.c
dht11/: CMakeLists.txt
dht11/main/: data_from_uart.c  main.c
digital clock/main/: CMakeLists.txt  main.h
leds (turn on:off:pulse) /: CMakeLists.txt
leds (turn on:off:pulse) /main/: data_from_uart.c  main.h
main/: CMakeLists.txt  main.c
make_noise  (i2s)/main/: data_from_uart.c  main.c
photoresistor/: CMakeLists.txt
photoresistor/main/: CMakeLists.txt  main.c  main.h
t00/: CMakeLists.txt
t00/main/: main.c  photoresistor.h
t01/: CMakeLists.txt  sdkconfig
t01/main/: CMakeLists.txt  console.h  data_from_uart.c  leds_module.c  libmx.h  main.c  mx_arr_size.c  mx_create_node.c  mx_list_size.c  mx_pop_back.c  mx_pop_front.c  mx_push_back.c  mx_push_front.c  mx_strsplit.c
t02/main/: CMakeLists.txt  data_from_uart.c  main.c  main.h
t03/main/: data_from_uart.c  main.c
t04/: CMakeLists.txt
t04/main/: CMakeLists.txt  data_from_uart.c  main.h
(+61 files in other folders)
