idf_component_register(SRCS "main.c"SRCS
                        SRCS "mx_pop_front.c"
                        SRCS "mx_pop_back.c"
                        SRCS "mx_list_size.c"
                        SRCS "mx_create_node.c"
                        SRCS "mx_push_back.c"
                        SRCS "mx_push_front.c"
                        INCLUDE_DIRS "."
                        )