idf_component_register(SRCS "mx_strsplit.c"
                        SRCS "mx_pop_front.c"
                        SRCS "mx_pop_back.c"
                        SRCS "mx_list_size.c"
                        SRCS "mx_create_node.c"
                        SRCS "mx_push_back.c"
                        SRCS "mx_push_front.c"
                        SRCS "mx_arr_size.c"
                        INCLUDE_DIRS "."
#                        REQUIRES leds
#                        REQUIRES include
                        )